# liquid-logger

./: README.md  liquid-logger.cabal  stack.yaml
logs-elim/: summary-patterns.csv
logs-rename-prefix/: summary-ceab39a0a405493a3ba2c3686be4b21ddd9646a6.csv
logs-scrape/: f4764fa7e9b3992c80c4d9f73cbfbcaea4c16071-all-import.csv  f4764fa7e9b3992c80c4d9f73cbfbcaea4c16071-no-import.csv  f4764fa7e9b3992c80c4d9f73cbfbcaea4c16071-used-import.csv
logs/logs-elim/: summary-eliminate-bound.csv
logs/logs-fast-elim/: summary-borscht-develop.csv  summary-borscht-fast-elim-no-project-kut.csv  summary-borscht-fast-elim.csv
logs/logs-fast-elim-cosman/: summary-develop.csv  summary-fast-elim.csv
logs/logs-jul-12-2016/: summary1.csv  summary10.csv  summary2.csv  summary3.csv  summary4.csv  summary5.csv  summary6.csv  summary7.csv  summary8.csv  summary9.csv
logs/logs-rename-prefix/: summary-4b15a33fe4b717cd38ef4e6e52dc02122c7d97ca.csv
src/: AnalyzeLogs.hs
