name:                liquid-logger 
version:             0.1.0.1
synopsis:            Scripts for manipulating liquid-* performance logs 
description:         Scripts for manipulating liquid-* performance logs 
homepage:            https://github.com/ucsd-progsys/liquid-logger 
license:             MIT 
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable analyzeLogs
  default-language: Haskell98
  Build-Depends: base >= 4 && < 5
               , csv-table >= 0.1.0.1 
               , csv == 0.1.2
  Main-is: src/Main.hs 
