name:                liquid-logger
version:             0.1.0.1
synopsis:            Scripts for manipulating liquid-* performance logs
description:         Scripts for manipulating liquid-* performance logs
homepage:            https://github.com/ucsd-progsys/liquid-logger
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Library
  default-language: Haskell98
  hs-source-dirs: src
  Build-Depends: base >= 4 && < 5
               , csv-table >= 0.1.0.1
               , csv == 0.1.2
               , directory
               , filepath
               
  Exposed-Modules: AnalyzeLogs
